--- a/auth/package.json
+++ b/auth/package.json
@@ -2,9 +2,10 @@
   "name": "auth",
   "version": "1.0.0",
   "description": "",
-  "main": "server.ts",
+  "main": "app.ts",
   "scripts": {
-    "start": "ts-node server.ts",
+    "start": "ts-node app.ts",
+    "dev": "ts-node-dev app.ts",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -20,6 +21,7 @@
     "@types/node": "^22.13.13",
     "@types/nodemailer": "^6.4.17",
     "ts-node": "^10.9.2",
+    "ts-node-dev": "^2.0.0",
     "typescript": "^5.8.2"
   },
   "dependencies": {
